--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
     "@types/chart.js": "^2.9.37",
+    "@types/node": "^18.14.5",
     "less": "^4.1.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
